# GAC-Extenstion

./: .gitignore  README.md  compute_all_concepts.py  hypothesis_test.py  minimal_test.py  pyproject.toml
solution_concepts/: __init__.py  core.py  harsanyi.py  nucleolus.py  shapley.py  utils.py
tests/: __init__.py  test_solution_concepts.py
